# SmallObject

./: .clang-format  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  ChunkBench.cpp  FixedAllocatorBench.cpp
cmake/: CompilerWarnings.cmake
include/: Chunk.h  FixedAllocator.h  SingletonHolder.h  SmallObjAllocator.h  SmallObject.h
src/: AllocatorUtility.cpp  BranchOptimization.hpp  CMakeLists.txt  Chunk.cpp  Chunk.hpp  ChunkLocator.cpp  ChunkLocator.hpp  ChunkManager.cpp  ChunkManager.hpp  ChunkTest.cpp  CommonTypes.hpp  FixedAllocator.cpp  FixedAllocator.hpp  FixedAllocatorTest.cpp  SingletonHolder.hpp  SingletonHolderTest.cpp  SmallObjAllocator.cpp  SmallObjAllocator.hpp  SmallObjAllocatorTest.cpp  SmallObject.cpp  SmallObject.hpp  SmallObjectTest.cpp
src/bench/: CMakeLists.txt
src/test/: CMakeLists.txt  FixedAllocatorTest.cpp  SingletonHolderTest.cpp  SmallObjAllocatorTest.cpp  SmallObjectTest.cpp
test/: AllocatorUtilityTest.cpp  CMakeLists.txt  ChunkManagerTest.cpp  ChunkTest.cpp
